# PS-Monitor-IoT-System

./: .$Backend.drawio.bkp  .$PS - squeeme.drawio.bkp  .$PS - squeeme.drawio.dtmp  .gitignore  .gitmodules  PS - squeeme.drawio  PS Architecture.drawio  README.md  Report.tex  RestAPI.yaml  Scheduale.gantt  client_secret_147143376368-tf3ne7ajkt1iq1v07r2grq6th58l7cjr.apps.googleusercontent.com.json
Board/IoT_System_MCU/main/: CMakeLists.txt
Board/IoT_System_MCU/main/include/: aes_util.h
Board/IoT_System_MCU/main/include/sensor/: sensor_reader.h
Board/IoT_System_MCU/main/src/: main.c
Board/IoT_System_MCU/main/src/tests/: all_sensors_test.c  ph_reader_test.c  reset_button_test.c  voltage_reader_test_2.c  wake_up_cause_test.c  water_sensor_as_wake_up_stub_test.c  water_sensor_reader_test.c
Board/IoT_System_MCU/main/src/utils/: entropy_poll.c  mqtt_util.c  time_util.c  utils.c
Board/IoT_System_MCU/main/src/utils/ph/: ph_reader_fake.c  ph_reader_real.c
Board/IoT_System_MCU/main/src/utils/sensor/: sensor_readings.c
Board/IoT_System_MCU/main/src/utils/temperature/: temperature_reader_real.c
Board/IoT_System_MCU/main/src/utils/water_flow/: water_flow_reader_fake.c
Board/IoT_System_MCU/main/src/utils/water_leak/: water_leak_reader_fake.c
Board/IoT_System_MCU/main/src/utils/water_level/: water_level_reader_fake.c  water_level_reader_real.c
Board/Ph_IoT_Monitor_System/main/: CMakeLists.txt  main.c
Board/Ph_IoT_Monitor_System/main/include/: broker_util.h  deep_sleep.h  dht11.h  esp_touch_util.h  mqtt_util.h  ph_reader_fake.h  ph_values_struct.h  rsa_util.h  time_util.h  time_utils.h  utils.h
Board/Ph_IoT_Monitor_System/main/include/mbedtls/: entropy_poll.h
Board/Ph_IoT_Monitor_System/main/include/sensor/: humidity_reader.h  humidity_record.h  ph_reader.h  ph_record.h  sensor_reader.h  sensor_record.h  sensor_records.h  temp_reader.h  temp_record.h  water_flow_reader.h  water_level_reader.h
Board/Ph_IoT_Monitor_System/main/src/: broker_util.c  deep_sleep_main.c  main.c  main_aes_test.c  main_broker_test.c  main_final.c  main_time_test.c  nvs_util.c  ph_reader_fake.c  ph_reader_real.c  pushingbox_util.c  wifi_main.c
Board/Ph_IoT_Monitor_System/main/src/tests/: dht11_sensor_test.c  humidity_main_test.c  main_time_test.c  ph_reader_test.c  sockets_test.c  touch_pad_sensor_test.c  voltage_reader_test.c  voltage_reader_test_2.c
Board/Ph_IoT_Monitor_System/main/src/utils/: aes_util.c  broker_util.c  deep_sleep.c  dht11.c  mqtt_util.c  nvs_util.c  ph_reader_fake.c  rsa_util.c  sha256_util.c  time_utils.c  utils.c
Board/Ph_IoT_Monitor_System/main/src/utils/humidity/: humidity_reader_fake.c
Board/Ph_IoT_Monitor_System/main/src/utils/ph/: ph_reader_fake.c
Board/Ph_IoT_Monitor_System/main/src/utils/sensor/: sensor_readings.c  sensor_records.c
Board/Ph_IoT_Monitor_System/main/src/utils/temp/: temperature_reader_fake.c
Board/Ph_IoT_Monitor_System/main/src/utils/temperature/: temperature_reader_fake.c  temperature_reader_real.c
Board/Ph_IoT_Monitor_System/main/src/utils/water_flow/: water_flow_reader_fake.c
Board/Ph_IoT_Monitor_System/main/src/utils/water_level/: water_level_reader_fake.c
Board/Ph_IoT_Monitor_System/main/utils/: nvs_util.h  pushingbox_util.h
Board/Ph_IoT_Monitor_System/test/: CMakeLists.txt  test_main.c  test_nav_utils.c
MCU/IoT_System_MCU/main/: CMakeLists.txt  Kconfig.projbuild
MCU/IoT_System_MCU/main/include/: adc_reader.h  base64_util.h  mqtt_util.h  nvs_util.h  sha256_util.h  sliding_window.h  time_util.h  utils.h  wifi_connect_util.h
MCU/IoT_System_MCU/main/include/sensor/: humidity_reader.h  ph_reader.h  sensor_reader.h  sensor_record.h  temp_reader.h  water_leak_reader.h  water_level_reader.h
MCU/IoT_System_MCU/main/src/: main.c
MCU/IoT_System_MCU/main/src/tests/: all_sensors_test.c  dht11_sensor_test.c  energy_consumption_test.c  energy_consumption_test_single_stage.c  file_test.c  main_aes_test.c  main_time_test.c  ph_reader_test.c  water_sensor_reader_test.c
MCU/IoT_System_MCU/main/src/utils/: PKCS7.c  adc_reader.c  base64_util.c  deep_sleep.c  dht11.c  esp_touch_util.c  mqtt_util.c  nvs_util.c  sliding_window.c  time_util.c  wifi_connect_util.c
MCU/IoT_System_MCU/main/src/utils/humidity/: humidity_reader_real.c
MCU/IoT_System_MCU/main/src/utils/ph/: ph_reader_fake.c  ph_reader_real.c
MCU/IoT_System_MCU/main/src/utils/sensor/: sensor_readings.c
MCU/IoT_System_MCU/main/src/utils/temperature/: temperature_reader_fake.c  temperature_reader_real.c
MCU/IoT_System_MCU/main/src/utils/water_flow/: water_flow_reader_fake.c
MCU/IoT_System_MCU/main/src/utils/water_leak/: water_leak_reader_fake.c  (+1 more)
(+605 files in other folders)
