idf_component_register(
        SRCS
            "src/tests/energy_consumption_test_single_stage.c"
            "src/utils/nvs_util.c"
            "src/utils/pushingbox_util.c"
            "src/utils/esp_touch_util.c"
            "src/utils/wifi_connect_util.c"
            "src/utils/mqtt_util.c"
            "src/utils/deep_sleep.c"
            "src/utils/dht11.c"
            "src/utils/time_util.c"
            "src/utils/aes_util.c"
            "src/utils/base64_util.c"
            "src/utils/PKCS7.c"
            "src/utils/rsa_util.c"
            "src/utils/sha256_util.c"
            "src/utils/utils.c"
            "src/utils/sliding_window.c"
            "src/utils/entropy_poll.c"
            "src/utils/sensor/sensor_readings.c"
            "src/utils/ph/ph_reader_real.c"
            "src/utils/temperature/temperature_reader_real.c"
            "src/utils/humidity/humidity_reader_real.c"
            "src/utils/water_leak/water_leak_reader_real.c"
            "src/utils/water_flow/water_flow_reader_fake.c"
            "src/utils/adc_reader.c"
        INCLUDE_DIRS "include"
)
target_compile_options(${COMPONENT_LIB} PRIVATE  -Wno-format)